[package]
name = "librashader"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.1.0-beta.13"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", version = "0.1.0-beta.13" }
librashader-presets = { path = "../librashader-presets", version = "0.1.0-beta.13" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.1.0-beta.13" }
librashader-reflect = { path = "../librashader-reflect", version = "0.1.0-beta.13", features = ["standalone"] }
librashader-runtime  = { path = "../librashader-runtime", version = "0.1.0-beta.13" }
librashader-runtime-d3d11  = { path = "../librashader-runtime-d3d11", version = "0.1.0-beta.13", optional = true }
librashader-runtime-d3d12  = { path = "../librashader-runtime-d3d12", version = "0.1.0-beta.13", optional = true }
librashader-runtime-gl = { path = "../librashader-runtime-gl", version = "0.1.0-beta.13", optional = true }
librashader-runtime-vk = { path = "../librashader-runtime-vk", version = "0.1.0-beta.13", optional = true }

ash = { version = "0.37.1+1.3.235", optional = true }
spirv_cross = { package = "librashader-spirv-cross", version = "0.23", features = ["glsl", "hlsl"], optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
optional = true

[features]
default = ["gl", "d3d11", "d3d12", "vk", "reflect", "preprocess", "presets" ]
gl = [ "runtime", "librashader-common/opengl", "librashader-runtime-gl", "spirv_cross" ]
d3d11 = [ "runtime", "librashader-common/d3d11", "librashader-runtime-d3d11", "windows/Win32_Graphics_Direct3D11" ]
d3d12 = [ "runtime", "librashader-common/d3d11", "librashader-runtime-d3d12", "windows/Win32_Graphics_Direct3D12" ]

vk = ["runtime", "librashader-common/vulkan", "librashader-runtime-vk", "ash" ]
runtime = []
reflect = []
preprocess = []
presets = []
internal = []

[package.metadata.docs.rs]
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
