[package]
name = "librashader"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "MPL-2.0 OR GPL-3.0-only"
version = "0.11.2"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
repository = "https://github.com/SnowflakePowered/librashader"
readme = "../README.md"
categories = ["emulators", "compilers", "graphics"]
keywords = ["shader", "retroarch", "SPIR-V"]
description = "RetroArch shaders for all."

[dependencies]
librashader-common = { path = "../librashader-common", version = "0.11.2" }
librashader-presets = { path = "../librashader-presets", version = "0.11.2" }
librashader-preprocess = { path = "../librashader-preprocess", version = "0.11.2" }
librashader-reflect = { path = "../librashader-reflect", version = "0.11.2" }
librashader-cache = { path = "../librashader-cache", version = "0.11.2" }
librashader-runtime  = { path = "../librashader-runtime", version = "0.11.2" }
librashader-pack  = { path = "../librashader-pack", version = "0.11.2" }
librashader-runtime-d3d11  = { path = "../librashader-runtime-d3d11", version = "0.11.2", optional = true, default-features = false }
librashader-runtime-d3d12  = { path = "../librashader-runtime-d3d12", version = "0.11.2", optional = true }
librashader-runtime-d3d9  = { path = "../librashader-runtime-d3d9", version = "0.11.2", optional = true }
librashader-runtime-gl = { path = "../librashader-runtime-gl", version = "0.11.2", optional = true }
librashader-runtime-vk = { path = "../librashader-runtime-vk", version = "0.11.2", optional = true }
librashader-runtime-mtl = { path = "../librashader-runtime-mtl", version = "0.11.2", optional = true }
librashader-runtime-wgpu = { path = "../librashader-runtime-wgpu", version = "0.11.2", optional = true }

ash = { version = "0.38", optional = true }

wgpu = { workspace = true, default-features = false, optional = true }
wgpu-types = {  workspace = true, optional = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
optional = true

[target.'cfg(target_vendor="apple")'.dependencies]
objc2-metal = { workspace = true, optional = true}
objc2 = { workspace = true, optional = true }

[features]
# core features and definitions
runtime = []
reflect = []
preprocess = []
presets = []

nightly = [ "librashader-reflect/nightly",
            "librashader-runtime-d3d9?/nightly",
            "librashader-runtime-d3d11?/nightly",
            "librashader-runtime-d3d12?/nightly",
            "librashader-runtime-gl?/nightly",
            "librashader-runtime-vk?/nightly",
            "librashader-runtime-mtl?/nightly",
            "librashader-runtime-wgpu?/nightly"
]
# Backwards-compatible no-op; stable is the default code path. Kept so older
# consumers that pass `features = ["stable"]` continue to build.
stable = []
# runtimes

runtime-gl = [ "runtime", "reflect-cross", "librashader-common/opengl", "librashader-runtime-gl" ]
runtime-d3d11 = [ "runtime", "reflect-cross","librashader-common/d3d11", "librashader-runtime-d3d11", "windows/Win32_Graphics_Direct3D11" ]

runtime-d3d11-seh = [ "librashader-runtime-d3d11?/microseh" ]
runtime-d3d12 = [ "runtime", "reflect-cross", "reflect-dxil", "librashader-common/d3d12", "librashader-runtime-d3d12", "windows/Win32_Graphics_Direct3D12" ]
runtime-d3d12-static = [ "librashader-runtime-d3d12?/static"]

runtime-d3d9 = [ "runtime", "reflect-cross", "librashader-common/d3d9", "librashader-runtime-d3d9", "windows/Win32_Graphics_Direct3D9" ]

runtime-vk = ["runtime", "reflect-cross", "librashader-common/vulkan", "librashader-runtime-vk", "ash" ]
runtime-wgpu = [ "runtime", "reflect-naga", "librashader-common/wgpu", "librashader-runtime-wgpu", "wgpu", "wgpu-types" ]
runtime-metal = [ "runtime", "reflect-naga",  "reflect-cross", "librashader-common/metal", "librashader-runtime-mtl", "objc2-metal", "objc2" ]

# reflection
reflect-cross = ["reflect", "librashader-reflect/cross"]
reflect-dxil = ["reflect", "librashader-reflect/dxil"]
reflect-naga = ["reflect", "librashader-reflect/naga", "librashader-reflect/naga-in"]

runtime-all = ["runtime-gl", "runtime-d3d11", "runtime-d3d12", "runtime-vk", "runtime-wgpu", "runtime-metal"]
reflect-all = ["reflect-cross", "reflect-dxil", "reflect-naga"]

# enable all features by default
default = [ "full", "runtime-d3d11-seh" ]
internal = []

full = ["runtime-all", "reflect-all", "preprocess", "presets"]

# cache hack
docsrs = ["librashader-cache/docsrs"]

serde = ["librashader-presets/serde", "librashader-preprocess/serde", "librashader-reflect/serde", "librashader-pack/serde"]

# emits warning messages in tests
github-ci = []

[dev-dependencies]
glob = "0.3.1"
rayon = "1.6.1"
once_cell = "1.19.0"

[package.metadata.docs.rs]
targets = [ "x86_64-pc-windows-msvc",
            "x86_64-unknown-linux-gnu",
            "x86_64-apple-darwin",
            "aarch64-apple-darwin",
            "aarch64-apple-ios",
            "i686-pc-windows-msvc",
            "i686-unknown-linux-gnu", ]
# `runtime-d3d11-seh` is in the default feature set, but microseh's MSVC-only C build
# script can not run in the docs.rs cross-build environment, so disable default features
# and re-enable the doc surface explicitly (without seh) here.
no-default-features = true
features = ["docsrs", "full"]
rustdoc-args = ["--cfg", "docsrs"]
