[package]
name = "librashader-web-demo"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0 OR GPL-3.0-only"
publish = false
description = "Rotating triangle in a browser, with the crt-royale shader pack applied via librashader-runtime-wgpu."

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
librashader-common = { path = "../../librashader-common", version = "0.10.1", features = ["wgpu"] }
librashader-pack = { path = "../../librashader-pack", version = "0.10.1", default-features = false, features = ["serde"] }
librashader-runtime-wgpu = { path = "../../librashader-runtime-wgpu", version = "0.10.1", default-features = false, features = ["wgsl_preset_pack", "wgpu_webgpu"] }

wgpu = { version = "29", default-features = false, features = ["wgsl", "webgpu"] }
bytemuck = { version = "1.14", features = ["derive"] }
rmp-serde = "1.3"

# Browser glue
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "Performance",
]
